--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/material": "^5.12.2",
     "@mui/system": "^5.1.1",
     "@privacyresearch/libsignal-protocol-protobuf-ts": "^0.0.8",
+    "@privacyresearch/libsignal-protocol-typescript": "^0.0.16",
     "@types/pubsub-js": "^1.8.3",
     "@types/styled-components": "^5.1.15",
     "assert": "^2.0.0",
